# qt-learning

./: .gitignore  clean.sh
chapter0/: CMakeLists.txt
chapter0-app/: CMakeLists.txt  main.cpp
chapter0app/: CMakeLists.txt
chapter0console/: CMakeLists.txt  main.cpp
chapter1-gui/: CMakeLists.txt  main.cpp
chapter1-widget/: CMakeLists.txt  test.cpp
chapter1console/: CMakeLists.txt  main.cpp
chapter1gui/: CMakeLists.txt
chapter1widget/: CMakeLists.txt  main.cpp
chapter2-MouseEvent/: CMakeLists.txt  mainwindow.cpp
chapter2-customsignal/: main.cpp  receiver.cpp  receiver.h
chapter2-property/: myclass.cpp  myclass.h
chapter2-qobject/: main.cpp
chapter2MouseEvent/: mainwindow.h
chapter2customsignal/: CMakeLists.txt  sender.cpp  sender.h
chapter2datetime/: CMakeLists.txt
chapter2property/: CMakeLists.txt  main.cpp  myclass.h
chapter2qobject/: CMakeLists.txt
chapter4-container/: CMakeLists.txt  main.cpp
chapter5-datetime/: main.cpp
chapter6-dir/: CMakeLists.txt  main.cpp
chapter6-qfileinfo/: CMakeLists.txt  main.cpp
chapter6-qfileread/: CMakeLists.txt  main.cpp
chapter6-qfilewrite/: CMakeLists.txt  main.cpp  words.txt
chapter7-frameless/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
chapter7-minusplus/: CMakeLists.txt  main.cpp  minusplus.cpp  minusplus.h
chapter7-simplegui/: CMakeLists.txt  main.cpp  myStyle.css  res.qrc  widget.cpp
chapter8-2horizontal-layout/: widget.cpp
chapter8-3mixlayout/: widget.cpp
chapter8-4gridlayout/: widget.cpp
chapter8-5gridlayout/: widget.cpp
chapter8-6gridlayout/: widget.cpp
(+8 files in other folders)
